# wav2c

./: .gitignore  Cargo.toml  Makefile  README.md  make_golden.sh
.github/workflows/: build.yml
src/: main.rs
tests/: integration.rs
tests/golden/: mono_32bit.c  mono_32bit.h  mono_32bit_base16.c  mono_32bit_base16.h  mono_8bit.c  mono_8bit.h  mono_8bit_base16.c  mono_8bit_base16.h  mono_8bit_prefix.c  mono_8bit_prefix.h  stereo_16bit.c  stereo_16bit.h  stereo_16bit_base16.c  stereo_16bit_base16.h  stereo_8bit_low.c  stereo_8bit_low.h  stereo_8bit_low_base16.c  stereo_8bit_low_base16.h
