[package]
name = "wav2c"
authors = ["John Whittington <john@jbrengineering.co.uk>"]
description = "Convert WAV files to C arrays for embedded LPCM audio playback"
repository = "https://github.com/tuna-f1sh/wav2c"
license = "Apache-2.0"
version = "0.9.0"
edition = "2021"
keywords = ["audio", "wav", "embedded", "lpcm", "c", "array"]
categories = ["command-line-utilities"]
default-run = "wav2c"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.11.6"
hound = "3.5.1"
log = "0.4.22"

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.4.1"
tempfile = "3.15.0"
